chore: installed the required dependencies and set-up configuration